Updated the About me page

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -46,9 +46,24 @@
 								<header class="major">
 									<h1>About Me</h1>
 								</header>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
+								<p>My name is Ritika Ghosh, I am a student at Northwestern University doing my Master's in Robotics program. I did my bachelor's degree in Thapar University, India in Mechatronics. My focus right now is in Machine Learning, Computer Vision and Sensing and Navigation and I am currently working on projects which align with these interests. I am still exploring the ever evolving sphere of Robotics and I am thrilled to be a part of this community.</p>
+								<p>My resume is available <a href="Resume.html"> here</a>.</p>
 							</section>
+							<section class="split contact">
+								<section class="alt">
+								<section>
+									<h3>Email</h3>
+									<p><a href="#">ritikaghosh2023@u.northwestern.edu</a></p>
+								</section>
+								<section>
+									<h3>Phone Number</h3>
+									<p><a href="#">1(872)235 7270</a></p>
+								</section>
+								<section>
+									<h3>Location</h3>
+									<p><a href="#">Evanston, Illinois</a></p>
+								</section>
+								<section>
 
 					</div>
 
