--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Ritika's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -76,7 +76,7 @@
 										<li><a href="AirHockey.html" class="button">Read More</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<header>
 										<span class="date">September, 2022</span>
 										<h2><a href="#">Pen Grabbing Robot</a></h2>
@@ -86,11 +86,11 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
-								</article>
+								</article> -->
 								<article>
 									<header>
 										<span class="date">December, 2022</span>
-										<h2><a href="JackBox.html">Dice in a cup Simulation</a></h2>
+										<h2><a href="JackBox.html">Dice in a cup Simulation: Impact Dynamics</a></h2>
 									</header>
 									<a href="JackBox.html" class="image fit"><img src="images/JackinTheBox.gif" alt="" /></a>
 									<h3>Python, Impact Dynamics, Euler Lagrange, google collab simulation</h3>
@@ -114,7 +114,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Ritika Ghosh</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
