Added the RRT project

--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
 										<li><a href="Manipulation.html" class="button">Read More</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<span class="date">September, 2022</span>
+										<h2><a href="RRT.html">RRT Path Planning</a></h2>
+									</header>
+									<a href="RRT.html" class="image fit"><img src="images/ezgif.com-gif-maker.gif" alt="" /></a>
+									<h3>Python, Path Planning, Matplotlib</h3>
+									<ul class="actions special">
+										<li><a href="RRT.html" class="button">Read More</a></li>
+									</ul>
+								</article>
 
 					</div>
 
