--- a/RRT.html
+++ b/RRT.html
@@ -51,7 +51,7 @@
 										<h2>Simple RRT</h2>
 									</header>
 									<p>Developed a RRT in python for a 2D domain, D=[0, 100]x[0, 100] with an initial configuration of (50, 50) and incremental distancee, d = 1. The reult is plotted for input number of vertices, K.</p>
-									<video width="100%" height="100%" autoplay muted>
+									<video width="100%" height="100%" autoplay loop muted>
 										<source src="images/RRT1 (Simple).mp4" type="video/mp4">
 										<source src="RRT1 (Simple).ogg" type="video/ogg">
 									</video>
@@ -61,9 +61,20 @@
 											<h2>Path Planning with Obstacles</h2>
 										</header>
 										<p>This RRT has the same domain size but it has a random amount of circular obstacles of varying radii along with an initial and goal position. This RRT runs similar to the simple RRT while avoiding obstacles and stops when if finds an obstacle free straight line path to the goal position.</p>
-										<video width="100%" height="100%" autoplay muted>
+										<video width="100%" height="100%" autoplay loop muted>
 											<source src="images/RRT2.mp4" type="video/mp4">
 											<source src="RRT2.ogg" type="video/ogg">
+										</video>
+										<hr />
+
+									<div class="box alt"></div>
+										<header>
+											<h2>Path Planning in 3D</h2>
+										</header>
+										<p>This RRT has the same concept as a regular 2 dimensional rapidly exploring random tree algorithm, however in this the z axis dimension is also considered in all of the calculations.</p>
+										<video width="100%" height="100%" autoplay loop muted>
+											<source src="images/3Drrt.mp4" type="video/mp4">
+											<source src="3Drrt.ogg" type="video/ogg">
 										</video>
 										<hr />
                                     <h3>Know more about this project at <a href="https://github.com/GhoshRitika/RRT">this github link</a> .</h3>
