--- a/index.html
+++ b/index.html
@@ -51,17 +51,23 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<!-- <article class="post featured">
+							<article class="post featured">
 								<header class="major">
-									<span class="date">December, 2022</span>
-									<h2><a href="AirHockey.html">HockeyBot</a></h2>
+									<span class="date">March, 2023</span>
+									<h2><a href="CopyCat.html">CopyCat: Movement Mirroring with Allegro Hand Robot</a></h2>
 								</header>
-								<a href="AirHockey.html" class="image main"><img src="images/Air_hockeyMainPage.gif" alt="" /></a>
-								<p>Here's how I made a Franka arm playing Air Hockey!</p>
+								<a href="CopyCat.html" class="image main">
+									<video width="100%" height="100%" autoplay loop muted>
+										<source src="images/Sequence3(1).mp4" type="video/mp4">
+										<source src="Sequence3(1).ogg" type="video/ogg">
+									</video>
+								</a>
+								<!-- <h4>The CopyCat package enables the 4 fingered Wonick robotics’ Allegro hand to mirror the finger movement of an actual hand. </h4> -->
+								<h3>ROS2, MoveIt!, Mediapipe(gesture recognition and hand tracking), C++, python</h3>
 								<ul class="actions special">
-									<li><a href="AirHockey.html" class="button large">Read more</a></li>
+									<li><a href="CopyCat.html" class="button large">Read more</a></li>
 								</ul>
-							</article> -->
+							</article>
 
 						<!-- Posts -->
 							<section class="posts">
@@ -114,7 +120,13 @@
 										<span class="date">September, 2022</span>
 										<h2><a href="RRT.html">RRT Path Planning</a></h2>
 									</header>
-									<a href="RRT.html" class="image fit"><img src="images/ezgif.com-gif-maker.gif" alt="" /></a>
+									<!-- <a href="RRT.html" class="image fit"><img src="images/ezgif.com-gif-maker.gif" alt="" /></a> -->
+									<a href="RRT.html" class="image main">
+										<video width="100%" height="100%" autoplay loop muted>
+											<source src="images/3Drrt.mp4" type="video/mp4">
+											<source src="3Drrt.ogg" type="video/ogg">
+										</video>
+									</a>
 									<h3>Python, Path Planning, Matplotlib</h3>
 									<ul class="actions special">
 										<li><a href="RRT.html" class="button">Read More</a></li>
