--- a/AirHockey.html
+++ b/AirHockey.html
@@ -46,7 +46,7 @@
 									<h1><a href="https://github.com/GhoshRitika/HockeyBot">Franka Arm playing Air Hockey</a> -HockeyBot</h1>
 								</header>
                                 <!-- <span class="image main"><img src="images/hockeybot_video.mp4" alt="" /></span> -->
-                                <video width="100%" height="100%" autoplay muted>
+                                <video width="100%" height="100%" autoplay loop muted>
                                     <source src="images/hockeybot_video.mp4" type="video/mp4">
                                     <source src="hockeybot_video.ogg" type="video/ogg">
                                   </video>
@@ -97,7 +97,7 @@
 
 										<dt>Puck blocking and hitting:</dt>
 											<p>The arm end effector moves to its desired goal position by following waypoints which mimic the trajectory of the incoming puck. By following this path, the end effector holding the paddle eventually encounters the puck hitting it back to its opponent.</p>
-                                            <video width="100%" height="100%" autoplay muted>
+                                            <video width="100%" height="100%" autoplay loop muted>
                                                 <source src="images/Integration_HockeyBot.mp4" type="video/mp4">
                                                 <source src="Integration_HockeyBot.ogg" type="video/ogg">
                                               </video>
