--- a/CopyCat.html
+++ b/CopyCat.html
@@ -48,7 +48,7 @@
 								</header>
                                 <!-- <span class="image main"><img src="images/hockeybot_video.mp4" alt="" /></span> -->
                                 <div class="video-container">
-                                    <iframe width="100%" height="600" src="https://www.youtube.com/embed/wFPPJUybkIA?autoplay=0&c&loop=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    <iframe width="100%" height="600" src="https://www.youtube.com/embed/wFPPJUybkIA?autoplay=1&controls=1&mute=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; loop;" allowfullscreen></iframe>
                                 </div>
                                 <!-- <video width="100%" height="100%" autoplay loop muted>
                                     <source src="images/Sequence1.mp4" type="video/mp4">
@@ -165,7 +165,7 @@
                                                     <source src="Sequence1.ogg" type="video/ogg">
                                                   </video></a> -->
                                                   <div class="video-container">
-                                                    <iframe width="100%" height="328" src="https://www.youtube.com/embed/wFPPJUybkIA?autoplay=1&c&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                                    <iframe width="100%" height="328" src="https://www.youtube.com/embed/wFPPJUybkIA?autoplay=1&controls=1&mute=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                                   </div></a>
                                             </div>
                                             <div class="col-6 col-12-small">
