--- a/CopyCat.html
+++ b/CopyCat.html
@@ -47,13 +47,13 @@
                                     <i>Note: All the videos shown have been sped upto 3 times its original speed.</i>
 								</header>
                                 <!-- <span class="image main"><img src="images/hockeybot_video.mp4" alt="" /></span> -->
-                                <div class="video-container">
+                                <!-- <div class="video-container">
                                     <iframe width="100%" height="600" src="https://www.youtube.com/embed/wFPPJUybkIA?autoplay=1&controls=1&mute=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; loop;" allowfullscreen></iframe>
-                                </div>
-                                <!-- <video width="100%" height="100%" autoplay loop muted>
-                                    <source src="images/Sequence1.mp4" type="video/mp4">
-                                    <source src="Sequence1.ogg" type="video/ogg">
-                                  </video> -->
+                                </div> -->
+                                <video width="100%" height="100%" autoplay loop muted>
+                                    <source src="images/Sequence1_1.mp4" type="video/mp4">
+                                    <source src="Sequence1_1.ogg" type="video/ogg">
+                                  </video>
                                 <div class="box alt"></div>
 									<header>
 										<h2>Overview</h2>
@@ -160,13 +160,13 @@
                                         <div class="row">
                                             <div class="col-6 col-12-small">
                                                 <a href="#" class="image fit">
-                                                  <!-- <video width="100%" height="100%" autoplay loop muted>
+                                                  <video width="100%" height="100%" autoplay loop muted>
                                                     <source src="images/Sequence1.mp4" type="video/mp4">
                                                     <source src="Sequence1.ogg" type="video/ogg">
-                                                  </video></a> -->
-                                                  <div class="video-container">
+                                                  </video></a>
+                                                  <!-- <div class="video-container">
                                                     <iframe width="100%" height="328" src="https://www.youtube.com/embed/wFPPJUybkIA?autoplay=1&controls=1&mute=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                                                  </div></a>
+                                                  </div></a> -->
                                             </div>
                                             <div class="col-6 col-12-small">
                                                 <a href="#" class="image fit">
