--- a/CopyCat.html
+++ b/CopyCat.html
@@ -161,8 +161,8 @@
                                             <div class="col-6 col-12-small">
                                                 <a href="#" class="image fit">
                                                   <video width="100%" height="100%" autoplay loop muted>
-                                                    <source src="images/Sequence1.mp4" type="video/mp4">
-                                                    <source src="Sequence1.ogg" type="video/ogg">
+                                                    <source src="images/Sequence1_1.mp4" type="video/mp4">
+                                                    <source src="Sequence1_1.ogg" type="video/ogg">
                                                   </video></a>
                                                   <!-- <div class="video-container">
                                                     <iframe width="100%" height="328" src="https://www.youtube.com/embed/wFPPJUybkIA?autoplay=1&controls=1&mute=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
