Fixed the aboutme page tab

--- a/CopyCat.html
+++ b/CopyCat.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>HockeyBot Ritika Ghosh</title>
+		<title>CopyCat Ritika Ghosh</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,16 +46,12 @@
 									<h1>CopyCat: <a href="https://github.com/GhoshRitika/Allegro_hand">Movement Mirroring with Allegro Hand Robot</a></h1>
                                     <i>Note: All the videos shown have been sped upto 3 times its original speed.</i>
 								</header>
-                                <!-- <span class="image main"><img src="images/hockeybot_video.mp4" alt="" /></span> -->
-                                <!-- <div class="video-container">
-                                    <iframe width="100%" height="600" src="https://www.youtube.com/embed/wFPPJUybkIA?autoplay=1&controls=1&mute=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; loop;" allowfullscreen></iframe>
-                                </div> -->
-                                <video width="100%" height="100%" autoplay loop muted>
-                                    <source src="images/Sequence1_1.mp4" type="video/mp4">
-                                    <source src="Sequence1_1.ogg" type="video/ogg">
-                                  </video>
-                                <div class="box alt"></div>
-									<header>
+                  <video width="100%" height="100%" autoplay loop muted>
+                      <source src="images/Sequence1_1.mp4" type="video/mp4">
+                      <source src="Sequence1_1.ogg" type="video/ogg">
+                    </video>
+                  <div class="box alt"></div>
+								<header>
 										<h2>Overview</h2>
 									</header>
 									<p>The CopyCat package enables the 4 fingered Wonick robotics’ Allegro hand to mirror the finger movement of an actual hand, where the thumb, index, middle and ring fingers are represented by the 4 fingers on the robot while the pinky finger is simply ignored in our case.</p>
