--- a/AboutMe.html
+++ b/AboutMe.html
@@ -25,7 +25,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
+							<li><a href="index.html">Home</a></li>
                             <li><a href="Resume.html">Resume</a></li>
 							<li class="active"><a href="AboutMe.html">About Me</a></li>
 
