Added the SLAM page

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<div id="intro">
+					<!-- <div id="intro">
 						<h1>Ritika Ghosh</h1>
 						<p>Welcome to my portfolio, here are the highlights of some of the projects I have made.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
-					</div>
+					</div> -->
 
 				<!-- Header -->
 					<header id="header">
@@ -49,9 +49,8 @@
 
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Featured Post -->
-							<article class="post featured">
+							<!-- <article class="post featured">
 								<header class="major">
 									<span class="date">March, 2023</span>
 									<h2><a href="CopyCat.html">CopyCat: Movement Mirroring with Allegro Hand Robot</a></h2>
@@ -62,15 +61,47 @@
 										<source src="Sequence3(1).ogg" type="video/ogg">
 									</video>
 								</a>
-								<!-- <h4>The CopyCat package enables the 4 fingered Wonick robotics’ Allegro hand to mirror the finger movement of an actual hand. </h4> -->
 								<h3>ROS2, MoveIt!, Mediapipe(gesture recognition and hand tracking), C++, python</h3>
 								<ul class="actions special">
 									<li><a href="CopyCat.html" class="button large">Read more</a></li>
 								</ul>
-							</article>
+							</article> -->
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header class="major">
+										<span class="date">March, 2023</span>
+										<h2><a href="CopyCat.html">CopyCat: Movement Mirroring with Allegro Hand Robot</a></h2>
+									</header>
+									<a href="CopyCat.html" class="image fit">
+										<video width="100%" height="100%" autoplay loop muted>
+											<source src="images/Sequence3(1).mp4" type="video/mp4">
+											<source src="Sequence3(1).ogg" type="video/ogg">
+										</video>
+									</a>
+									<!-- <h4>The CopyCat package enables the 4 fingered Wonick robotics’ Allegro hand to mirror the finger movement of an actual hand. </h4> -->
+									<h3>ROS2, MoveIt!, Mediapipe(gesture recognition and hand tracking), C++, python</h3>
+									<ul class="actions special">
+										<li><a href="CopyCat.html" class="button large">Read more</a></li>
+									</ul>
+								</article>
+								<article>
+									<header class="major">
+										<span class="date">March, 2023</span>
+										<h2><a href="SLAM.html">Extended Kalman Filter with Landmark Detection</a></h2>
+									</header>
+									<a href="SLAM.html" class="image fit">
+										<video width="100%" height="100%" autoplay loop muted>
+											<source src="images/EKFlandmark.webm" type="video/webm">
+											<source src="EKFlandmark.ogg" type="video/ogg">
+										</video>
+									</a>
+									<h3>Localization, Extended Kalman Filter, Data Association, Unsupervised Learning, C++</h3>
+									<ul class="actions special">
+										<li><a href="SLAM.html" class="button large">Read more</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">December, 2022</span>
