--- a/SLAM.html
+++ b/SLAM.html
@@ -23,7 +23,7 @@
 					</header>
 
 				<!-- Nav -->
-					<nav id="nav">SLAM EKF
+					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="SLAM.html">SLAM: EKF Implementation</a></li>
