--- a/index.html
+++ b/index.html
@@ -68,51 +68,67 @@
 							</article> -->
 
 						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header class="major">
-										<span class="date">March, 2023</span>
-										<h2><a href="CopyCat.html">CopyCat: Movement Mirroring with Allegro Hand Robot</a></h2>
-									</header>
-									<a href="CopyCat.html" class="image fit">
-										<video width="100%" height="100%" autoplay loop muted>
-											<source src="images/Sequence3(1).mp4" type="video/mp4">
-											<source src="Sequence3(1).ogg" type="video/ogg">
-										</video>
-									</a>
-									<!-- <h4>The CopyCat package enables the 4 fingered Wonick robotics’ Allegro hand to mirror the finger movement of an actual hand. </h4> -->
-									<h3>ROS2, MoveIt!, Mediapipe(gesture recognition and hand tracking), C++, python</h3>
-									<ul class="actions special">
-										<li><a href="CopyCat.html" class="button large">Read more</a></li>
-									</ul>
-								</article>
-								<article>
-									<header class="major">
-										<span class="date">March, 2023</span>
-										<h2><a href="SLAM.html">Extended Kalman Filter with Landmark Detection</a></h2>
-									</header>
-									<a href="SLAM.html" class="image fit">
-										<video width="100%" height="100%" autoplay loop muted>
-											<source src="images/EKFlandmark.webm" type="video/webm">
-											<source src="EKFlandmark.ogg" type="video/ogg">
-										</video>
-									</a>
-									<h3>Localization, Extended Kalman Filter, Data Association, Unsupervised Learning, C++</h3>
-									<ul class="actions special">
-										<li><a href="SLAM.html" class="button large">Read more</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">December, 2022</span>
-										<h2><a href="AirHockey.html">Franka Arm playing Air Hockey: HockeyBot</a></h2>
-									</header>
-									<a href="AirHockey.html" class="image fit"><img src="images/Air_hockeyMainPage.gif" alt="" /></a>
-									<h3>ROS2, MoveIt!, Computer Vision (OpenCV), python</h3>
-									<ul class="actions special">
-										<li><a href="AirHockey.html" class="button">Read More</a></li>
-									</ul>
-								</article>
+						<section class="posts">
+							<article>
+								<header class="major">
+									<span class="date">August, 2023</span>
+									<h2><a href="SharedAutonomy.html">Human Robot Collaboration with Reinforcement Learning</a></h2>
+								</header>
+								<a href="SharedAutonomy.html" class="image fit">
+									<video width="100%" height="100%" autoplay loop muted>
+										<source src="images/SharedAutonomy.mp4" type="video/mp4">
+										<source src="SharedAutonomy.ogg" type="video/ogg">
+									</video>
+								</a>
+								<h3>Reinforcement Learning, Proximal Policy Optimization, Behavioral cloning, python</h3>
+								<ul class="actions special">
+									<li><a href="SharedAutonomy.html" class="button large">Read more</a></li>
+								</ul>
+							</article>
+							<article>
+								<header class="major">
+									<span class="date">March, 2023</span>
+									<h2><a href="CopyCat.html">CopyCat: Movement Mirroring with Allegro Hand Robot</a></h2>
+								</header>
+								<a href="CopyCat.html" class="image fit">
+									<video width="100%" height="100%" autoplay loop muted>
+										<source src="images/Sequence3(1).mp4" type="video/mp4">
+										<source src="Sequence3(1).ogg" type="video/ogg">
+									</video>
+								</a>
+								<!-- <h4>The CopyCat package enables the 4 fingered Wonick robotics’ Allegro hand to mirror the finger movement of an actual hand. </h4> -->
+								<h3>ROS2, MoveIt!, Mediapipe(gesture recognition and hand tracking), C++, python</h3>
+								<ul class="actions special">
+									<li><a href="CopyCat.html" class="button large">Read more</a></li>
+								</ul>
+							</article>
+							<article>
+								<header class="major">
+									<span class="date">March, 2023</span>
+									<h2><a href="SLAM.html">Extended Kalman Filter with Landmark Detection</a></h2>
+								</header>
+								<a href="SLAM.html" class="image fit">
+									<video width="100%" height="100%" autoplay loop muted>
+										<source src="images/EKFlandmark.webm" type="video/webm">
+										<source src="EKFlandmark.ogg" type="video/ogg">
+									</video>
+								</a>
+								<h3>Localization, Extended Kalman Filter, Data Association, Unsupervised Learning, C++</h3>
+								<ul class="actions special">
+									<li><a href="SLAM.html" class="button large">Read more</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<span class="date">December, 2022</span>
+									<h2><a href="AirHockey.html">Franka Arm playing Air Hockey: HockeyBot</a></h2>
+								</header>
+								<a href="AirHockey.html" class="image fit"><img src="images/Air_hockeyMainPage.gif" alt="" /></a>
+								<h3>ROS2, MoveIt!, Computer Vision (OpenCV), python</h3>
+								<ul class="actions special">
+									<li><a href="AirHockey.html" class="button">Read More</a></li>
+								</ul>
+							</article>
 								<!-- <article>
 									<header>
 										<span class="date">September, 2022</span>
@@ -124,45 +140,45 @@
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article> -->
-								<article>
-									<header>
-										<span class="date">December, 2022</span>
-										<h2><a href="JackBox.html">Dice in a cup Simulation: Impact Dynamics</a></h2>
-									</header>
-									<a href="JackBox.html" class="image fit"><img src="images/JackinTheBox.gif" alt="" /></a>
-									<h3>Python, Impact Dynamics, Euler Lagrange, google collab simulation</h3>
-									<ul class="actions special">
-										<li><a href="JackBox.html" class="button">Read More</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">December, 2022</span>
-										<h2><a href="Manipulation.html">Pick and Place Kuka Youbot Simulation</a></h2>
-									</header>
-									<a href="Manipulation.html" class="image fit"><img src="images/PickPlace.gif" alt="" /></a>
-									<h3>CoppeliaSim, python, Modern Robotics, Robotic Manipulation, Control system</h3>
-									<ul class="actions special">
-										<li><a href="Manipulation.html" class="button">Read More</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">September, 2022</span>
-										<h2><a href="RRT.html">RRT Path Planning</a></h2>
-									</header>
-									<!-- <a href="RRT.html" class="image fit"><img src="images/ezgif.com-gif-maker.gif" alt="" /></a> -->
-									<a href="RRT.html" class="image main">
-										<video width="100%" height="100%" autoplay loop muted>
-											<source src="images/3Drrt.mp4" type="video/mp4">
-											<source src="3Drrt.ogg" type="video/ogg">
-										</video>
-									</a>
-									<h3>Python, Path Planning, Matplotlib</h3>
-									<ul class="actions special">
-										<li><a href="RRT.html" class="button">Read More</a></li>
-									</ul>
-								</article>
+							<article>
+								<header>
+									<span class="date">December, 2022</span>
+									<h2><a href="JackBox.html">Dice in a cup Simulation: Impact Dynamics</a></h2>
+								</header>
+								<a href="JackBox.html" class="image fit"><img src="images/JackinTheBox.gif" alt="" /></a>
+								<h3>Python, Impact Dynamics, Euler Lagrange, google collab simulation</h3>
+								<ul class="actions special">
+									<li><a href="JackBox.html" class="button">Read More</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<span class="date">December, 2022</span>
+									<h2><a href="Manipulation.html">Pick and Place Kuka Youbot Simulation</a></h2>
+								</header>
+								<a href="Manipulation.html" class="image fit"><img src="images/PickPlace.gif" alt="" /></a>
+								<h3>CoppeliaSim, python, Modern Robotics, Robotic Manipulation, Control system</h3>
+								<ul class="actions special">
+									<li><a href="Manipulation.html" class="button">Read More</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<span class="date">September, 2022</span>
+									<h2><a href="RRT.html">RRT Path Planning</a></h2>
+								</header>
+								<!-- <a href="RRT.html" class="image fit"><img src="images/ezgif.com-gif-maker.gif" alt="" /></a> -->
+								<a href="RRT.html" class="image main">
+									<video width="100%" height="100%" autoplay loop muted>
+										<source src="images/3Drrt.mp4" type="video/mp4">
+										<source src="3Drrt.ogg" type="video/ogg">
+									</video>
+								</a>
+								<h3>Python, Path Planning, Matplotlib</h3>
+								<ul class="actions special">
+									<li><a href="RRT.html" class="button">Read More</a></li>
+								</ul>
+							</article>
 
 					</div>
 
