Updated the video

--- a/SharedAutonomy.html
+++ b/SharedAutonomy.html
@@ -46,8 +46,8 @@
 									<h1> <a href="https://github.com/GhoshRitika/Allegro_hand">Human Robot Collaboration with Reinforcement Learning</a></h1>
 								</header>
                   <video width="100%" height="100%" autoplay loop muted>
-                      <source src="images/SharedAutonomy.mp4" type="video/mp4">
-                      <source src="SharedAutonomy.ogg" type="video/ogg">
+                      <source src="images/HRIreinforcementlearning.mp4" type="video/mp4">
+                      <source src="HRIreinforcementlearning.ogg" type="video/ogg">
                   </video>
                   <div class="box alt"></div>
 								<header>
@@ -144,8 +144,13 @@
                                             <div class="col-6 col-12-small">
                                                 <a href="#" class="image fit"><img src="images/Frankaplot.png" alt="" /></a>
                                             </div>
+                                            <div class="col-6 col-12-small">
+                                                <p>The above plots shows the accumulated rewards of the environment as it trained. In both the environments it is observed that the assistive agent, inspite of take very minimal actions does infact improve the humans ability to acheive the goals successfully. The total score and the time taken to reach the goal in case of the Franka Reach environment were the metrics used to ascertain the impact of the assistive agent.</p>
+                                            </div>
+                                            <div class="col-6 col-12-small">
+                                                <a href="#" class="image fit"><img src="images/results_6.png" alt="" /></a>
+                                            </div>
                                         </div>
-                                        <p>The above plots shows the accumulated rewards of the environment as it trained. In both the environments it is observed that the assistive agent, inspite of take very minimal actions does infact improve the humans ability to acheive the goals successfully. The total score and the time taken to reach the goal in case of the Franka Reach environment were the metrics used to ascertain the impact of the assistive agent.</p>
 									</dl>
 
                                     <h2>Know more about this project at <a href="https://github.com/GhoshRitika/LunarLanderRL/">this github link</a> .</h2>
